[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
hlist = "0.1.2"
mod-mint = { path = "../mod-mint" }
mod-wallet = { path = "../mod-wallet" }
tokio = { version = "1.20.0", features = [ "full" ] }
